--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nootroland",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "server.js",
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
