--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^7.5.1",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
